# Odessy

./: .gitignore  Cargo.toml  odessy_characters.db
character/: Cargo.toml
character/src/: lib.rs  nation.rs  person.rs  physic.rs  prompt.rs  utilis.rs  vitality.rs  warrior.rs
character/src/core/: character.rs  health.rs  mod.rs
character/src/physical/: physical.rs
character/src/vitality/: mod.rs  vitality.rs
character/src/warrior/: fightstyle.rs  mod.rs  warrior.rs  weapon.rs
docs/: character.md  character_flow.md  future_weapon_system.md  military.md  mode.md  monster.md  vitality.md
military/: Cargo.toml
monster/: Cargo.toml
src/: main.rs  storage.rs  ui.rs  utilis.rs
src/app/: mod.rs
src/persistence/: mod.rs  store.rs
src/ui/: mod.rs  profile.rs  selector.rs  terminal.rs
vitality/: Cargo.toml
vitality/src/: core.rs  lib.rs  mana.rs  profile.rs  spell.rs
vitality/src/aqua/spells/: mod.rs
vitality/src/aqua/spells/combat/: mod.rs
vitality/src/aqua/spells/support/: mod.rs
vitality/src/aqua/spells/utility/: mod.rs
vitality/src/glacia/spells/: mod.rs
vitality/src/glacia/spells/combat/: mod.rs
vitality/src/glacia/spells/support/: mod.rs
vitality/src/glacia/spells/utility/: mod.rs
vitality/src/igna/spells/: mod.rs
vitality/src/nulla/spells/: mod.rs
vitality/src/planta/spells/: mod.rs
vitality/src/stucture/: mod.rs  spell.rs  vitality.rs
vitality/src/terra/spells/: mod.rs
vitality/src/umbra/: mod.rs
vitality/src/umbra/spells/: mod.rs
vitality/src/venta/spells/: mod.rs
vitality/src/volt/spells/: mod.rs
(+21 files in other folders)
