[package]
name = "Odessy"
version = "0.1.0"
edition = "2024"

[dependencies]
character = { path =  "./character" }
crossterm = "0.29.0"
el_roi = "0.1.0"
military = { path =  "./military" }
mode ={ path = "./mode"}
monster = { path = "./monster"}
ratatui = "0.29.0"
vitality = { path =  "./vitality" }

[workspace]
members = [
    "character",
    "military", 
    "mode", 
    "monster",
    "vitality",
]
